# Mini-Framework-IAC

./: .gitignore  README.md  main.py  pyproject.toml
constructores/: base_constructor.py  ecr_constructor.py  ecs_constructor.py  rds_constructor.py  sgs_constructor.py  vpc_constructor.py
dotenvfiles/: .env.example
images/: README.md
images/metabase/: Dockerfile
models/: vpc_models.py
scripts/: README.md  __init__.py  create_ec2_security_group.py  deploy_restore_ec2_from_database.py  liberar_sg_rds_temporario.py  metabase_backup.sql  send_image_to_ecr.py
templates/: alb-stack.yaml  ecr-stack.yaml  ecs-stack.yaml  rds-stack.yaml  vpc-endpoint-stack.yaml  vpc-stack.yaml
templates/security-groups/: sgs-alb-stack.yaml  sgs-ecs-stack.yaml  sgs-external-access-stack.yaml  sgs-rds-stack.yaml
utils/: create_ec2_key_pair.py  read_json_file.py  read_template.py
variables/: __init__.py  variables.py
